# crier

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run-crier-hidden.vbs  run-crier.bat
.github/workflows/: release.yml
crier/: __init__.py  __main__.py  app.py  autostart.py  chunking.py  config.py  engine.py  hotkey.py  hotkey_capture.py  models.py  player.py  popup.py  region_select.py  screen_ocr.py  seek_slider.py  selection.py  settings_dialog.py  settings_store.py  single_instance.py  tray.py  tsm.py  updater.py  winfocus.py
crier/providers/: __init__.py  kokoro.py  openai.py
